# poc-bug-intellij-rust-macro-declared-deref

./: .env  Cargo.toml  README.md
migrations/2020-07-16-poc/: up.sql
src/: main.rs  schema.rs
