[package]
name = "poc-bug-intellij-rust-macro-declared-deref"
version = "0.1.0"
authors = ["Erik Zivkovic <erik@zivkovic.se>"]
edition = "2018"

[dependencies]
# Diesel deps
diesel = { version = "1.4.3", features = ["mysql", "uuid", "chrono"] }

# Rocket deps, default-features = false on the rocket crate removes weird dependency conflict with jsonwebtoken
rocket = { version = "0.4.5", default-features = false }
rocket_contrib = { version = "0.4.5", features = ["json", "diesel_mysql_pool"] }
